syntax = "proto3";
package Oven;

option csharp_namespace = "GrpcService.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

service OvenProtoService {
    rpc DeviceConnect(google.protobuf.Empty) returns (ProtoServiceConnection);
    rpc MonitorDevice (google.protobuf.Empty) returns (stream ProtoOvenResponse);       
    rpc GetOvenSetting(google.protobuf.Empty) returns (ProtoOvenSetting);
    rpc UpdateOvenSetting(ProtoOvenSetting) returns (google.protobuf.BoolValue);     
}

service PatternProtoService {    
    rpc GetPatternList(google.protobuf.Empty) returns (ProtoPatternList);
    rpc GetPattern(google.protobuf.Int32Value) returns (ProtoPattern);
    rpc CreatePattern(ProtoPattern) returns (google.protobuf.BoolValue);
    rpc UpdatePattern(ProtoPattern) returns (google.protobuf.BoolValue);
    rpc DeletePattern(google.protobuf.Int32Value) returns (google.protobuf.BoolValue);
}

service OperationProtoService {
    rpc GetOperationLogWithID(google.protobuf.Int32Value) returns (ActualLogList);
    rpc GetOperationLogWithFilter(OperationLogWithFilter) returns (ProtoOperationLogInfo);
    rpc StartOperation(ProtoPattern) returns (google.protobuf.BoolValue);
    rpc StopOperation(google.protobuf.Empty) returns (google.protobuf.BoolValue);
    rpc CurrentPattern(google.protobuf.Empty) returns (ProtoPattern);
    rpc ManualTemp(ProtoManualTemp) returns (google.protobuf.BoolValue);

}

message OperationLogWithFilter {
     int32 YearSelect = 1;
     int32 MonthSelect= 2;
}

message ProtoServiceConnection {
    bool PlcConnected = 1;
    ProtoOvenInfo OvenInfo = 2;
    ProtoOperationLogInfo OperationLogInfo = 3;
}
message ProtoOvenInfo {
    int32 SerialNumber = 1;
    string MachineName = 2;   
    int32 MachineModel = 3;
    google.protobuf.Timestamp WarrantyStart = 4;
    google.protobuf.Timestamp WarrantyEnd = 5;
    bool Operation = 6;         
}

message ProtoOperationLogInfo {
    repeated int32 YearList = 1;
    repeated int32 MonthList = 2;
    repeated ProtoOvenLogList LogList = 3;
}
message ProtoOvenLogList {
    int32 LogID = 1;
    int32 PatternID = 2;
    google.protobuf.Timestamp StartLog = 3;
    google.protobuf.Timestamp EndLog = 4;
}

message ProtoOvenResponse {
    Temp Temp = 1;
    Coil Coil = 2;
    MachineStatus Status = 3;
}
message Temp {
    int32 TempOven = 1;
    int32 TempAFB = 2;
    int32 TempTube = 3;
    int32 TempFloor = 4;
}
message Coil { 
    bool CoilOven = 1;
    bool CoilAFB = 2;
    bool CoilTube = 3;
    bool CoilPump = 4;
    bool CoilFloor = 5;
}
message MachineStatus {
    bool Door = 1;
    bool Operation = 2;
    int32 PatternId = 3;
    int32 TotalStep = 4;
    int32 CurrentStep = 5;
    PatternStatus PatternStatus = 6;
    google.protobuf.Duration RemainHours = 7;
    google.protobuf.Duration RemainMins = 8;
    ActualLogList TempLogList = 9;
}
enum PatternStatus {
    Standby = 0;
    Down = 1;
    Up = 2;
    Stable = 3;
    End = 4;    
}

message ActualLogList
{
    repeated ActualLog TempLog = 1;
}
message ActualLog {
    google.protobuf.Timestamp TempTime = 1;
    Temp TempValue = 2;
}

message ProtoOvenSetting {
    int32 AfbStartTemp = 1;
    int32 AfbEndTemp  = 2;
    int32 AfbDelay  = 3;
    int32 TubeStartTemp = 4;
    int32 FloorStartTemp = 5;
    int32 AlarmOven = 6;
    int32 AlarmAfb = 7;
    Temp SetpointTemp = 8;
    Coil CoilSetting = 9;
    ProtoManualTemp ManualTemp = 10;
}

message ProtoPatternList {
    repeated ProtoPattern Pattern = 1;
}
message ProtoPattern {
    int32 PatternId = 1;
    string PatternName = 2;
    int32 StepCount = 3;    
    google.protobuf.Duration TotalTime = 4;
    ProtoAirpump AirPump = 5;
    repeated ProtoPatternDetail PatternDetail = 6;
    bool UseAfb = 7;
    google.protobuf.Timestamp CreateDate = 8;
    google.protobuf.Timestamp ModifyDate = 9;
}
message ProtoAirpump {
    int32 Id = 1;    
    int32 StartTemp = 2;
    int32 EndTemp = 3;
    google.protobuf.Duration DelayMinuteDuration = 4;
    bool UseAirpump = 5;
}
message ProtoPatternDetail {
    int32 DetailId = 1;
    int32 PatternId = 2;
    int32 Step = 3;
    int32 Temp = 4;
    google.protobuf.Duration StepDuration = 5;
}

message ProtoManualTemp
{
    bool Use = 1;
    int32 Temp = 2;
}
